Add propeller study

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -59,7 +59,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Compute distance estimates\n",
+    "# Preprocessing\n",
+    "\n",
+    "## a. compute distance estimates\n",
     "\n",
     "TODO: this part is hacky and will be improved by getting imu estimates rather than flow dx/dy estimates, which turn out to be very unreliable."
    ]
@@ -143,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Investigate spectrogram"
+    "## b. compute spectrogram"
    ]
   },
   {
@@ -170,7 +172,19 @@
     "                    print('big error:', err)\n",
     "            spectrogram[f_idx, t_idx, :] = np.abs(row.signals_f[t_idx, :, i])\n",
     "    row.spectrogram = spectrogram\n",
-    "    return row"
+    "    return row\n",
+    "\n",
+    "def plot_spectrogram(ax, row, min_freq, max_freq, mic_idx=0):\n",
+    "    plot_freq = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
+    "    plot_times = ~np.isnan(row.d_estimate)\n",
+    "    print('time window with valid distances:', np.where(plot_times)[0][[0, -1]])\n",
+    "    spec = row.spectrogram[plot_freq, :, mic_idx][:-1, :]\n",
+    "    spec = spec[:, plot_times][:, :-1]\n",
+    "    \n",
+    "    spec[spec > 0] = np.log10(spec[spec > 0])\n",
+    "    spec[spec == 0] = np.nan\n",
+    "    \n",
+    "    ax.pcolorfast(row.seconds[plot_times], all_frequencies[plot_freq], spec)"
    ]
   },
   {
@@ -186,12 +200,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0. Propeller noise study"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from wall_analysis import filter_by_dicts\n",
+    "appendix = \"_new\"\n",
+    "source = \"None\"\n",
+    "\n",
+    "df_sources = filter_by_dicts(df_total, [{\"source\":source, \"appendix\":appendix}])\n",
+    "assert len(df_sources) == 1\n",
+    "row = df_sources.iloc[0]\n",
+    "\n",
+    "n_mics = row.signals_f.shape[1]\n",
+    "times_idx = ~np.isnan(row.d_estimate)\n",
+    "distances = row.d_estimate[times_idx] * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.signal\n",
+    "fig, axs = plt.subplots(1, n_mics, sharex=True)#, sharey=True)\n",
+    "fig.set_size_inches(20, 5)\n",
+    "\n",
+    "min_freq = 100\n",
+    "max_freq = 5000\n",
+    "spec = row.spectrogram[:, times_idx, :]\n",
+    "for i in range(n_mics):\n",
+    "    #fig, ax = plt.subplots()\n",
+    "    #fig.set_size_inches(10, 5)\n",
+    "    plot_spectrogram(axs[i], row, min_freq=min_freq, max_freq=max_freq, mic_idx=i)\n",
+    "    [axs[i].axhline(f, label=f'{f}', color=f'C{j}', ls=':') for j, f in enumerate(FREQS)]\n",
+    "    axs[i].set_title(f'mic{i}')\n",
+    "    \n",
+    "    \n",
+    "plt.figure()\n",
+    "mask = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
+    "spec_average = np.mean(np.mean(spec[mask, :, :], axis=2), axis=1)\n",
+    "\n",
+    "max_indices = scipy.signal.find_peaks(spec_average)[0][:3]\n",
+    "#max_indices = np.argsort(spec_average)[::-1][:3]\n",
+    "plt.semilogy(all_frequencies[mask], spec_average)\n",
+    "[plt.axvline(all_frequencies[mask][m], color=f'C{j}', label=f'peak{j}') for j, m in enumerate(max_indices)]\n",
+    "plt.grid(which='both')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(1, n_mics, sharex=True, squeeze=False, sharey=True)\n",
+    "fig.set_size_inches(20, 5)\n",
+    "for j, f_idx in enumerate(max_indices):\n",
+    "    freq = all_frequencies[mask][f_idx]\n",
+    "    spec = row.spectrogram[mask, :, :]\n",
+    "    for i in range(n_mics):\n",
+    "        spec_here = spec[f_idx, times_idx, i]\n",
+    "        #axs[j, i].plot(row.seconds[times_idx], spec, color=f'C{j}', label=f'{f}')\n",
+    "        axs[0, i].plot(distances, spec_here, color=f'C{j}', label=f'{freq}Hz')\n",
+    "        axs[0, i].legend(loc='upper left')\n",
+    "        axs[0, i].set_title(f'mic{i}')\n",
+    "    #[axs[0, i].set_xlim(5, 20) for i in range(n_mics)]\n",
+    "    #[axs[0, i].set_xlim(5, 60) for i in range(n_mics)]\n",
+    "    [axs[0, i].set_xlabel('distance [cm]') for i in range(n_mics)]\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. frequency selection\n",
+    "\n",
+    "Investigate \n",
+    "- what bins are chosen by forced scheme (black dots below)\n",
+    "- when spectrogram at given bin is nonzero \n",
+    "\n",
+    "Above suggests that even when we do not play the given bins, there is significant propeller noise there (thus they are chosen among the 32 strongest frequency bins). The only exception is bin 2375, which is very clean."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print('available sources:', df_total.source.unique())\n",
     "filter_dict = {\n",
     "    #'source': 'None',\n",
@@ -216,39 +331,15 @@
    "source": [
     "sys.path.append(f'../experiments/{exp_name}/')\n",
     "from params import FREQS\n",
-    "min_freq = 100\n",
-    "max_freq = 5000\n",
-    "plot_freq = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
-    "plot_times = ~np.isnan(row.d_estimate)\n",
-    "print('time window with valid distances:', np.where(plot_times)[0][[0, -1]])\n",
     "\n",
-    "n_mics = row.signals_f.shape[1]\n",
     "#for mic_idx in range(n_mics):\n",
     "for mic_idx in range(1):\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(10, 5)\n",
-    "    spec = row.spectrogram[plot_freq, :, mic_idx][:-1, :]\n",
-    "    spec = spec[:, plot_times][:, :-1]\n",
     "    \n",
-    "    spec[spec > 0] = np.log10(spec[spec > 0])\n",
-    "    spec[spec == 0] = np.nan\n",
-    "    \n",
-    "    ax.pcolorfast(row.seconds[plot_times], all_frequencies[plot_freq], spec)\n",
+    "    plot_spectrogram(ax, row, min_freq=100, max_freq=5000, mic_idx=mic_idx)\n",
     "    [ax.axhline(f, label=f'{f}', color=f'C{i}', ls=':') for i, f in enumerate(FREQS)]\n",
     "    ax.set_title(row.source + row.appendix)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## frequency bin selection study\n",
-    "\n",
-    "Investigate \n",
-    "- what bins are choesn by forced scheme (black dots below)\n",
-    "- when spectrogram at given bin is nonzero \n",
-    "\n",
-    "Above suggests that even when we do not play the given bins, there is significant propeller noise there (thus they are chosen among the 32 strongest frequency bins). The only exception is bin 2375, which is very clean."
    ]
   },
   {
@@ -263,7 +354,7 @@
     "plt.scatter(row.seconds, strongest_bin, color='k', label='forced')\n",
     "\n",
     "#mic_indices = [0]\n",
-    "mic_indices = range(4)\n",
+    "mic_indices = range(n_mics)\n",
     "\n",
     "for i, f in enumerate(FREQS):\n",
     "    plt.axhline(f, label=f'{f}', color=f'C{i}')\n",
@@ -286,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## interference studies"
+    "## 2. interference studies"
    ]
   },
   {
@@ -299,7 +390,7 @@
     "\n",
     "freqs = FREQS\n",
     "\n",
-    "fig, axs = plt.subplots(len(freqs), n_mics, sharex=True, sharey=True)\n",
+    "fig, axs = plt.subplots(len(freqs), n_mics, sharex=True)#, sharey=True)\n",
     "fig.set_size_inches(20, 20)\n",
     "for j, f in enumerate(freqs): \n",
     "    f_idx = np.where(f == all_frequencies)[0][0]\n",
@@ -310,17 +401,21 @@
     "    row = df_sources.iloc[0]\n",
     "    \n",
     "    # forced\n",
-    "    times_idx = np.where(f == row.frequencies_matrix[:, 0])[0]\n",
+    "    #times_idx = np.where(f == row.frequencies_matrix[:, 0])[0]\n",
     "    # automatic\n",
     "    #times_idx = np.where(np.sum(spectrogram[f_idx, :, :], axis=1) > 0)[0]\n",
-    "\n",
+    "    times_idx = ~np.isnan(row.d_estimate)\n",
+    "    distances = row.d_estimate[times_idx] * 100\n",
+    "    \n",
     "    for i in range(n_mics):\n",
     "        spec = row.spectrogram[f_idx, times_idx, i]\n",
-    "        axs[j, i].plot(row.seconds[times_idx], spec, color=f'C{j}', label=f'{f}')\n",
+    "        #axs[j, i].plot(row.seconds[times_idx], spec, color=f'C{j}', label=f'{f}')\n",
+    "        axs[j, i].plot(distances, spec, color=f'C{j}', label=f'{f} Hz')\n",
     "        axs[j, i].legend(loc='upper left')\n",
-    "        \n",
-    "[axs[0, i].set_title(f'mic{i}') for i in range(n_mics)]\n",
-    "[axs[0, i].set_xlim(5, 20) for i in range(n_mics)]\n",
+    "        axs[j, i].set_title(f'mic{i}')\n",
+    "#[axs[0, i].set_xlim(5, 20) for i in range(n_mics)]\n",
+    "#[axs[0, i].set_xlim(5, 60) for i in range(n_mics)]\n",
+    "[axs[-1, i].set_xlabel('distance [cm]') for i in range(n_mics)]\n",
     "pass"
    ]
   },
@@ -341,7 +436,7 @@
     "    df_sources = filter_by_dicts(df_total, [{\"source\":source, \"appendix\":appendix}])\n",
     "    for i, row in df_sources.iterrows():\n",
     "        \n",
-    "        fig, axs = plt.subplots(len(freqs), n_mics, sharex=True, sharey=True)\n",
+    "        fig, axs = plt.subplots(len(freqs), n_mics, sharex=True)#, sharey=True)\n",
     "        fig.set_size_inches(20, 20)\n",
     "        fig.suptitle(row.source + row.appendix, y=0.9)\n",
     "        for j, f in enumerate(freqs): \n",
@@ -351,22 +446,17 @@
     "            times_idx = np.where(f == row.frequencies_matrix[:, 0])[0]\n",
     "            # automatic\n",
     "            #times_idx = np.where(np.sum(spectrogram[f_idx, :, :], axis=1) > 0)[0]\n",
+    "            #times_idx = ~np.isnan(row.d_estimate)\n",
+    "            distances = row.d_estimate[times_idx] * 100\n",
     "\n",
     "            for i in range(n_mics):\n",
     "                spec = row.spectrogram[f_idx, times_idx, i]\n",
-    "                axs[j, i].plot(row.seconds[times_idx], spec, color=f'C{j}', label=f'{f}')\n",
+    "                #axs[j, i].plot(row.seconds[times_idx], spec, color=f'C{j}', label=f'{f}')\n",
+    "                axs[j, i].plot(distances, spec, color=f'C{j}', label=f'{f}', marker='x')\n",
     "                axs[j, i].legend(loc='upper left')\n",
-    "\n",
-    "        [axs[0, i].set_title(f'mic{i}') for i in range(n_mics)]\n",
-    "        [axs[0, i].set_xlim(5, 20) for i in range(n_mics)]"
+    "                axs[j, i].set_title(f'mic{i}')\n",
+    "        #[axs[0, i].set_xlim(5, 20) for i in range(n_mics)]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
