Compare with theory

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -220,6 +220,8 @@
    "outputs": [],
    "source": [
     "from wall_analysis import filter_by_dicts\n",
+    "sys.path.append(f'../experiments/{exp_name}/')\n",
+    "from params import FREQS\n",
     "appendix = \"_new\"\n",
     "source = \"None\"\n",
     "\n",
@@ -257,10 +259,10 @@
     "mask = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
     "spec_average = np.mean(np.mean(spec[mask, :, :], axis=2), axis=1)\n",
     "\n",
-    "max_indices = scipy.signal.find_peaks(spec_average)[0][:3]\n",
+    "max_indices = scipy.signal.find_peaks(spec_average, height=5)[0][:3]\n",
     "#max_indices = np.argsort(spec_average)[::-1][:3]\n",
-    "plt.semilogy(all_frequencies[mask], spec_average)\n",
-    "[plt.axvline(all_frequencies[mask][m], color=f'C{j}', label=f'peak{j}') for j, m in enumerate(max_indices)]\n",
+    "plt.plot(all_frequencies[mask], spec_average)\n",
+    "[plt.axvline(all_frequencies[mask][m], color=f'C{j}', label=f'peak{j}', ls=':') for j, m in enumerate(max_indices)]\n",
     "plt.grid(which='both')\n",
     "plt.legend()"
    ]
@@ -271,20 +273,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(1, n_mics, sharex=True, squeeze=False, sharey=True)\n",
-    "fig.set_size_inches(20, 5)\n",
+    "fig, axs = plt.subplots(len(max_indices), n_mics, sharex=True, squeeze=False, sharey=True)\n",
+    "fig.set_size_inches(20, 10)\n",
+    "\n",
+    "# choose only times where the max snr bin is given. \n",
+    "#freqs = all_frequencies[mask][max_indices]\n",
+    "freq_max = 703\n",
+    "times_idx = np.where(row.frequencies_matrix[:, 1] == freq_max)[0]\n",
+    "distances = row.d_estimate[times_idx] * 100\n",
+    "\n",
     "for j, f_idx in enumerate(max_indices):\n",
-    "    freq = all_frequencies[mask][f_idx]\n",
+    "    freq = int(all_frequencies[mask][f_idx])\n",
     "    spec = row.spectrogram[mask, :, :]\n",
+    "    \n",
     "    for i in range(n_mics):\n",
     "        spec_here = spec[f_idx, times_idx, i]\n",
     "        #axs[j, i].plot(row.seconds[times_idx], spec, color=f'C{j}', label=f'{f}')\n",
-    "        axs[0, i].plot(distances, spec_here, color=f'C{j}', label=f'{freq}Hz')\n",
-    "        axs[0, i].legend(loc='upper left')\n",
-    "        axs[0, i].set_title(f'mic{i}')\n",
+    "        axs[j, i].plot(distances, spec_here, color=f'C{j}', label=f'{freq:.0f}Hz')\n",
+    "        axs[j, i].legend(loc='upper left')\n",
+    "        axs[j, i].set_title(f'mic{i}')\n",
     "    #[axs[0, i].set_xlim(5, 20) for i in range(n_mics)]\n",
     "    #[axs[0, i].set_xlim(5, 60) for i in range(n_mics)]\n",
-    "    [axs[0, i].set_xlabel('distance [cm]') for i in range(n_mics)]\n",
+    "    [axs[-1, i].set_xlabel('distance [cm]') for i in range(n_mics)]\n",
     "    pass"
    ]
   },
@@ -329,8 +339,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append(f'../experiments/{exp_name}/')\n",
-    "from params import FREQS\n",
     "\n",
     "#for mic_idx in range(n_mics):\n",
     "for mic_idx in range(1):\n",
