--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -216,7 +216,7 @@
     "from simulation import get_freq_slice_pyroom\n",
     "import progressbar\n",
     "\n",
-    "distances = np.linspace(0, 50, 100)\n",
+    "distances = np.linspace(0, 60, 100)\n",
     "frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
     "df_matrix = np.zeros((len(frequencies), len(distances)))\n",
     "\n",
@@ -291,24 +291,26 @@
     "from constants import SPEED_OF_SOUND\n",
     "\n",
     "#frequencies_slices = [671, 3125, 4156, 8000]\n",
-    "frequencies_slices = [1750, 2375, 3125, 3875]\n",
+    "#frequencies_slices = [1750, 2375, 3125, 3875]\n",
+    "frequencies_slices = [359,  703, 1406]\n",
     "\n",
-    "max_distance = 50\n",
+    "max_distance = 60\n",
     "fig, axs = plt.subplots(len(frequencies_slices), sharey=True, sharex=True)\n",
     "fig.suptitle('frequency slices')\n",
     "fig.set_size_inches(10, 5)\n",
     "for i, f in enumerate(frequencies_slices):\n",
     "    idx = np.argmin(np.abs(frequencies-f))\n",
     "    slice_ = df_matrix[idx, distances < max_distance]\n",
-    "    axs[i].plot(distances[distances < max_distance], slice_, label=f'{f}Hz')\n",
-    "    axs[i].set_xlabel('distance [cm]')\n",
+    "    #slice_ -= np.mean(slice_)\n",
+    "    \n",
+    "    d_constr = SPEED_OF_SOUND / (2 * f) * 100\n",
+    "    axs[i].plot(distances[distances < max_distance], slice_, label=f'{f}Hz, period={d_constr:.0f}cm')\n",
     "    axs[i].set_ylabel('response')\n",
     "    axs[i].legend(loc='upper right')\n",
     "    \n",
     "    \n",
     "    # peak from constr. interference is expected when the wavelength equals k * distance/2\n",
     "    # wavelength_constr = c / f_constr = distance / 2\n",
-    "    d_constr = SPEED_OF_SOUND / (2 * f) * 100\n",
     "    num_peaks = (distances[-1]-distances[0])//d_constr + 1\n",
     "    [axs[i].axvline(x=d, color='C1') for d in np.arange(num_peaks)*d_constr]\n",
     "    \n",
@@ -317,7 +319,8 @@
     "    freq = np.fft.rfftfreq(len(slice_), df)[1:]\n",
     "    plt.figure()\n",
     "    plt.plot(1/freq, np.abs(fft))\n",
-    "    plt.axvline(d_constr, color='C1')"
+    "    plt.axvline(d_constr, color='C1')\n",
+    "axs[-1].set_xlabel('distance [cm]')"
    ]
   },
   {
