--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -98,7 +98,7 @@
     "        ax.axvline(row.seconds[min_idx], color='k', label=f'end (above {min_z})')\n",
     "        ax.axvline(row.seconds[end_idx], color='b')\n",
     "        ax.set_xlim(0, 35)\n",
-    "        ax.scatter(row.seconds, d * 100, color='k', label='distance')\n",
+    "        ax.scatter(row.seconds, d * 1000, color='k', label='distance')\n",
     "        ax.set_title(f\"duration: {duration:.1f}s\")\n",
     "        ax.legend()"
    ]
@@ -135,7 +135,7 @@
     "    plt.xlabel('time [s]')\n",
     "    plt.ylabel('z [mm]')\n",
     "    #plt.ylim(-90, 90)\n",
-    "    plt.ylim(0, 600)\n",
+    "    plt.ylim(0, 650)\n",
     "    #plt.xlim(MIN_S, MAX_S)\n",
     "    \n",
     "    add_distance_estimates(df_total, i, ax=plt.gca())"
@@ -177,7 +177,7 @@
     "def plot_spectrogram(ax, row, min_freq, max_freq, mic_idx=0):\n",
     "    plot_freq = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
     "    plot_times = ~np.isnan(row.d_estimate)\n",
-    "    print('time window with valid distances:', np.where(plot_times)[0][[0, -1]])\n",
+    "    #print('time window with valid distances:', np.where(plot_times)[0][[0, -1]])\n",
     "    spec = row.spectrogram[plot_freq, :, mic_idx][:-1, :]\n",
     "    spec = spec[:, plot_times][:, :-1]\n",
     "    \n",
@@ -253,6 +253,8 @@
     "    plot_spectrogram(axs[i], row, min_freq=min_freq, max_freq=max_freq, mic_idx=i)\n",
     "    [axs[i].axhline(f, label=f'{f}', color=f'C{j}', ls=':') for j, f in enumerate(FREQS)]\n",
     "    axs[i].set_title(f'mic{i}')\n",
+    "    axs[i].set_xlabel(f'seconds [s]')\n",
+    "fig.suptitle('spectrograms during wall approach')\n",
     "    \n",
     "    \n",
     "plt.figure()\n",
@@ -273,7 +275,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(len(max_indices), n_mics, sharex=True, squeeze=False, sharey=True)\n",
+    "#fig, axs = plt.subplots(len(max_indices), n_mics, sharex=True, squeeze=False, sharey=True)\n",
+    "\n",
+    "n_harmonics = 4\n",
+    "fig, axs = plt.subplots(n_harmonics, n_mics, sharex=True, squeeze=False)#, sharey=True)\n",
     "fig.set_size_inches(20, 10)\n",
     "\n",
     "# choose only times where the max snr bin is given. \n",
@@ -282,8 +287,12 @@
     "times_idx = np.where(row.frequencies_matrix[:, 1] == freq_max)[0]\n",
     "distances = row.d_estimate[times_idx] * 100\n",
     "\n",
-    "for j, f_idx in enumerate(max_indices):\n",
-    "    freq = int(all_frequencies[mask][f_idx])\n",
+    "#for j, f_idx in enumerate(max_indices):\n",
+    "for j in range(n_harmonics):\n",
+    "    freq = freq_max * (j + 1)\n",
+    "    print(freq)\n",
+    "    f_idx = np.where(all_frequencies[mask] == freq)[0][0]\n",
+    "    #freq = int([f_idx])\n",
     "    spec = row.spectrogram[mask, :, :]\n",
     "    \n",
     "    for i in range(n_mics):\n",
@@ -319,11 +328,11 @@
    "source": [
     "print('available sources:', df_total.source.unique())\n",
     "filter_dict = {\n",
-    "    #'source': 'None',\n",
+    "    'source': 'None',\n",
     "    #'source': 'mono1750',\n",
     "    #'source': 'mono2375',\n",
     "    #'source': 'mono3125',\n",
-    "    'source': 'mono3875',\n",
+    "    #'source': 'mono3875',\n",
     "    #'source': 'sweep_slow',\n",
     "    #'source': 'sweep_fast',\n",
     "    'appendix': '_new'\n",
@@ -339,15 +348,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "#for mic_idx in range(n_mics):\n",
-    "for mic_idx in range(1):\n",
-    "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(10, 5)\n",
+    "for source in [s for s in df_total.source.unique() if 'mono' in s]:\n",
+    "    filter_dict['source'] = source\n",
+    "    rows = filter_by_dicts(df_total, [filter_dict])\n",
+    "    assert len(rows) == 1\n",
+    "    row = rows.iloc[0]\n",
     "    \n",
-    "    plot_spectrogram(ax, row, min_freq=100, max_freq=5000, mic_idx=mic_idx)\n",
-    "    [ax.axhline(f, label=f'{f}', color=f'C{i}', ls=':') for i, f in enumerate(FREQS)]\n",
-    "    ax.set_title(row.source + row.appendix)"
+    "    for mic_idx in [2]:\n",
+    "        fig, ax = plt.subplots()\n",
+    "        fig.set_size_inches(10, 5)\n",
+    "\n",
+    "        plot_spectrogram(ax, row, min_freq=100, max_freq=5000, mic_idx=mic_idx)\n",
+    "        [ax.axhline(f, label=f'{f}', color=f'C{i}', ls=':') for i, f in enumerate(FREQS)]\n",
+    "        ax.set_title(row.source + row.appendix + f\" mic{mic_idx}\")\n",
+    "        ax.legend(loc='lower left')"
    ]
   },
   {
