Rewrite audio_publisher

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "from wall_analysis import parse_experiments\n",
-    "exp_name = '2020_12_18_flying'; \n",
+    "exp_name = '2020_12_18_stepper'; \n",
     "fname = f'results/{exp_name}_real.pkl'\n",
     "\n",
     "try:\n",
@@ -75,32 +75,43 @@
     "MIN_S = 5 # read from plot\n",
     "MAX_S = 25 # read from plot\n",
     "\n",
-    "def add_distance_estimates(df_total, i, ax=None, min_time=MIN_S, max_time=MAX_S, min_z=300):\n",
-    "    row = df_total.loc[i]\n",
-    "    row.z[np.isnan(row.z)] = 0\n",
-    "    start_idx = np.where(row.seconds > min_time)[0][0]\n",
-    "    end_idx = np.where(row.seconds < max_time)[0][-1]\n",
+    "def add_distance_estimates(row, ax=None, min_time=MIN_S, max_time=MAX_S, min_z=300):\n",
+    "    if row.distance == 51:\n",
+    "        d = np.linspace(.1, .6, len(row.seconds))\n",
+    "    elif row.distance == -51:\n",
+    "        d = np.linspace(.1, .6, len(row.seconds))[::-1]\n",
+    "    else:\n",
+    "        d = np.full(len(row.seconds), np.nan)\n",
+    "        row.z[np.isnan(row.z)] = 0\n",
+    "        start_idx = np.where(row.seconds > min_time)[0][0]\n",
+    "        end_idx = np.where(row.seconds < max_time)[0][-1]\n",
     "\n",
-    "    assert end_idx > start_idx, f\"{start_idx}<={end_idx}\"\n",
-    "    valid_z = row.z[start_idx:end_idx]\n",
-    "    max_idx = start_idx + np.argmax(valid_z)\n",
-    "    min_idx = start_idx + np.where(valid_z > min_z)[0][-1]\n",
-    "    duration = row.seconds[min_idx] - row.seconds[max_idx]\n",
+    "        assert end_idx > start_idx, f\"{start_idx}<={end_idx}\"\n",
+    "        valid_z = row.z[start_idx:end_idx]\n",
+    "        max_idx = start_idx + np.argmax(valid_z)\n",
+    "        try:\n",
+    "            min_idx = start_idx + np.where(valid_z > min_z)[0][-1]\n",
+    "        except:\n",
+    "            min_idx = 0\n",
+    "        duration = row.seconds[min_idx] - row.seconds[max_idx]\n",
     "\n",
-    "    d = np.full(len(row.seconds), np.nan)\n",
-    "    times = row.seconds[max_idx:min_idx] - row.seconds[max_idx]\n",
-    "    d[max_idx:min_idx] = D_START - times * VELOCITY\n",
-    "    df_total.loc[i, 'd_estimate'] = d\n",
-    "    \n",
+    "        times = row.seconds[max_idx:min_idx] - row.seconds[max_idx]\n",
+    "        d[max_idx:min_idx] = D_START - times * VELOCITY\n",
+    "        \n",
+    "        if ax is not None:\n",
+    "            ax.axvline(row.seconds[start_idx], color='r')\n",
+    "            ax.axvline(row.seconds[max_idx], color='k', label='start (max)')\n",
+    "            ax.axvline(row.seconds[min_idx], color='k', label=f'end (above {min_z})')\n",
+    "            ax.axvline(row.seconds[end_idx], color='b')\n",
+    "            ax.set_xlim(0, 35)\n",
+    "            ax.set_title(f\"duration: {duration:.1f}s\")\n",
+    "        \n",
+    "    row['d_estimate'] = d\n",
+    "\n",
     "    if ax is not None:\n",
-    "        ax.axvline(row.seconds[start_idx], color='r')\n",
-    "        ax.axvline(row.seconds[max_idx], color='k', label='start (max)')\n",
-    "        ax.axvline(row.seconds[min_idx], color='k', label=f'end (above {min_z})')\n",
-    "        ax.axvline(row.seconds[end_idx], color='b')\n",
-    "        ax.set_xlim(0, 35)\n",
     "        ax.scatter(row.seconds, d * 1000, color='k', label='distance')\n",
-    "        ax.set_title(f\"duration: {duration:.1f}s\")\n",
-    "        ax.legend()"
+    "        ax.legend()\n",
+    "    return row"
    ]
   },
   {
@@ -115,7 +126,21 @@
     "D_START = 0.6 # [m], starting distance \n",
     "\n",
     "df_total = df_total.assign(d_estimate=None) # initialize df_estimate\n",
+    "df_total = df_total.apply(add_distance_estimates, axis=1)\n",
+    "\n",
     "for i, row in df_total.iterrows():\n",
+    "    \n",
+    "    plt.figure()\n",
+    "    df_total.iloc[i] = add_distance_estimates(row, ax=plt.gca())\n",
+    "    #plt.plot(row.yaw_deg)u\n",
+    "    if row.z is not None:\n",
+    "        plt.plot(row.seconds, row.z, color='C2')\n",
+    "    plt.xlabel('time [s]')\n",
+    "    plt.ylabel('z [mm]')\n",
+    "    #plt.ylim(-90, 90)\n",
+    "    plt.ylim(0, 650)\n",
+    "    #plt.xlim(MIN_S, MAX_S)\n",
+    "    \n",
     "    fig, ax = plt.subplots()\n",
     "    ax.plot(row.positions[:, 0], label='x', color='C0')\n",
     "    ax.plot(row.positions[:, 1], label='y', color='C1')\n",
@@ -127,18 +152,7 @@
     "    ax.set_xlabel('position idx [-]')\n",
     "    ax.set_ylabel('x, y [mm]')\n",
     "    ax.legend(loc='lower left')\n",
-    "    ax.set_title(\"lateral movement, \" + row.source + row.appendix)\n",
-    "    \n",
-    "    plt.figure()\n",
-    "    #plt.plot(row.yaw_deg)\n",
-    "    plt.plot(row.seconds, row.z, color='C2')\n",
-    "    plt.xlabel('time [s]')\n",
-    "    plt.ylabel('z [mm]')\n",
-    "    #plt.ylim(-90, 90)\n",
-    "    plt.ylim(0, 650)\n",
-    "    #plt.xlim(MIN_S, MAX_S)\n",
-    "    \n",
-    "    add_distance_estimates(df_total, i, ax=plt.gca())"
+    "    ax.set_title(\"lateral movement, \" + row.source + row.appendix)"
    ]
   },
   {
@@ -155,6 +169,9 @@
    "outputs": [],
    "source": [
     "def add_spectrogram(row):\n",
+    "    if row.frequencies_matrix is None:\n",
+    "        return row\n",
+    "    \n",
     "    # spectrogram is of shape 1025 x n_times x n_mics\n",
     "    spectrogram = np.zeros((len(all_frequencies), row.signals_f.shape[0], row.signals_f.shape[1]), dtype=float) \n",
     "    for t_idx in range(row.signals_f.shape[0]):\n",
@@ -172,19 +189,7 @@
     "                    print('big error:', err)\n",
     "            spectrogram[f_idx, t_idx, :] = np.abs(row.signals_f[t_idx, :, i])\n",
     "    row.spectrogram = spectrogram\n",
-    "    return row\n",
-    "\n",
-    "def plot_spectrogram(ax, row, min_freq, max_freq, mic_idx=0):\n",
-    "    plot_freq = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
-    "    plot_times = ~np.isnan(row.d_estimate)\n",
-    "    #print('time window with valid distances:', np.where(plot_times)[0][[0, -1]])\n",
-    "    spec = row.spectrogram[plot_freq, :, mic_idx][:-1, :]\n",
-    "    spec = spec[:, plot_times][:, :-1]\n",
-    "    \n",
-    "    spec[spec > 0] = np.log10(spec[spec > 0])\n",
-    "    spec[spec == 0] = np.nan\n",
-    "    \n",
-    "    ax.pcolorfast(row.seconds[plot_times], all_frequencies[plot_freq], spec)"
+    "    return row"
    ]
   },
   {
@@ -194,7 +199,7 @@
    "outputs": [],
    "source": [
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
-    "all_frequencies = np.round(np.fft.rfftfreq(N_BUFFER, 1/FS), 0)\n",
+    "all_frequencies = np.ceil(np.fft.rfftfreq(N_BUFFER, 1/FS))\n",
     "df_total = df_total.assign(spectrogram=None)\n",
     "df_total = df_total.apply(add_spectrogram, axis=1)"
    ]
@@ -210,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0. Propeller noise study"
+    "## 1. SNR study"
    ]
   },
   {
@@ -219,19 +224,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def plot_spectrogram(ax, row, min_freq, max_freq, mic_idx=0, **kwargs):\n",
+    "    plot_freq = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
+    "    plot_times = ~np.isnan(row.d_estimate)\n",
+    "    assert np.any(plot_times)\n",
+    "    #print('time window with valid distances:', np.where(plot_times)[0][[0, -1]])\n",
+    "    spec = row.spectrogram[plot_freq, :, mic_idx][:-1, :]\n",
+    "    spec = spec[:, plot_times][:, :-1]\n",
+    "    spec[spec > 0] = np.log10(spec[spec > 0])\n",
+    "    spec[spec == 0] = np.nan\n",
+    "    \n",
+    "    if row.distance == -51:\n",
+    "        d_increasing = row.d_estimate[plot_times][::-1]\n",
+    "        spec_increasing = spec[:, ::-1]\n",
+    "    else:\n",
+    "        d_increasing = row.d_estimate[plot_times]\n",
+    "        spec_increasing = spec\n",
+    "    ax.pcolorfast(d_increasing, all_frequencies[plot_freq], spec_increasing, **kwargs)\n",
+    "\n",
+    "def plot_total(ax, row, min_freq, max_freq, mic_idx=0, method=np.nanmean, **kwargs):\n",
+    "    plot_freq = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
+    "    plot_times = ~np.isnan(row.d_estimate)\n",
+    "    spec = row.spectrogram[plot_freq, :, mic_idx]\n",
+    "    spec[np.isnan(spec)] = 0.0\n",
+    "    assert np.all(spec >= 0), spec[np.where(spec<0)]\n",
+    "    spec = spec[:, plot_times]\n",
+    "    spec[spec == 0] = np.nan\n",
+    "    total = method(spec, axis=1)\n",
+    "    freq = all_frequencies[plot_freq]\n",
+    "    ax.plot(total, freq, **kwargs)\n",
+    "    ax.set_xlabel(method.__name__ + ' of spectrogram')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df_total.appendix.unique())\n",
+    "print(df_total.source.unique())\n",
+    "print(df_total.distance.unique())\n",
+    "#appendix = \"_new\"\n",
+    "#source = \"mono3125\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "from wall_analysis import filter_by_dicts\n",
-    "sys.path.append(f'../experiments/{exp_name}/')\n",
-    "from params import FREQS\n",
-    "appendix = \"_new\"\n",
-    "source = \"None\"\n",
     "\n",
-    "df_sources = filter_by_dicts(df_total, [{\"source\":source, \"appendix\":appendix}])\n",
-    "assert len(df_sources) == 1\n",
-    "row = df_sources.iloc[0]\n",
     "\n",
-    "n_mics = row.signals_f.shape[1]\n",
-    "times_idx = ~np.isnan(row.d_estimate)\n",
-    "distances = row.d_estimate[times_idx] * 100"
+    "min_freq = 100\n",
+    "max_freq = 5000\n",
+    "mic_idx = 0\n",
+    "\n",
+    "filter_dict = [{\"mic_type\":mic_type}]\n",
+    "dfs = filter_by_dicts(df_total, filter_dict)\n",
+    "\n",
+    "dfs = dfs.sort_values(by=['motors', 'source'], axis=0)\n",
+    "#maxi = np.nanmax(np.concatenate([*dfs.spectrogram], axis=1))\n",
+    "for motors, df_motors in dfs.groupby('motors'):\n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    i_col = 0\n",
+    "    for i, row in df_motors.iterrows():\n",
+    "        source = row.source\n",
+    "        if source in [\"mono1750\", \"mono3875\", \"sweep_fast\"]:\n",
+    "            continue\n",
+    "        i_col += 1\n",
+    "        fig, axs = plt.subplots(1, 2, squeeze=False, sharey=True)\n",
+    "        fig.set_size_inches(10, 5)\n",
+    "        plot_spectrogram(axs[0, 0], row, min_freq, max_freq, mic_idx=mic_idx)\n",
+    "        plot_total(axs[0, 1], row, min_freq, max_freq, mic_idx=0, method=np.nanmean, color=f\"C{i_col}\")\n",
+    "        #axs[0, 0].set_xlabel(f'seconds [s]')\n",
+    "        axs[0, 0].set_xlabel(f'distance [m]')\n",
+    "        axs[0, 0].set_ylabel('frequency [Hz]')\n",
+    "        fig.suptitle(f'spectrogram of mic{mic_idx}, source {source}, motors {row.motors}, appendix {row.appendix}')\n",
+    "        #axs[0, 1].set_xlim([0, maxi])\n",
+    "\n",
+    "        plot_total(ax, row, min_freq, max_freq, mic_idx=0, method=np.nanmean, label=source, color=f\"C{i_col}\")\n",
+    "        if \"mono\" in source:\n",
+    "            freq = int(source.strip(\"mono\"))\n",
+    "            ax.axhline(freq, color=f\"C{i_col}\", ls=\":\")\n",
+    "            axs[0, 1].axhline(freq, color=f\"C{i_col}\", ls=\":\")\n",
+    "    #ax.set_xscale('log')\n",
+    "    ax.set_ylabel('frequency [Hz]')\n",
+    "    ax.legend()\n",
+    "    ax.set_title(f'motors: {motors}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Propeller noise study"
    ]
   },
   {
@@ -241,32 +333,32 @@
    "outputs": [],
    "source": [
     "import scipy.signal\n",
-    "fig, axs = plt.subplots(1, n_mics, sharex=True)#, sharey=True)\n",
-    "fig.set_size_inches(20, 5)\n",
     "\n",
-    "min_freq = 100\n",
-    "max_freq = 5000\n",
-    "spec = row.spectrogram[:, times_idx, :]\n",
-    "for i in range(n_mics):\n",
-    "    #fig, ax = plt.subplots()\n",
-    "    #fig.set_size_inches(10, 5)\n",
-    "    plot_spectrogram(axs[i], row, min_freq=min_freq, max_freq=max_freq, mic_idx=i)\n",
-    "    [axs[i].axhline(f, label=f'{f}', color=f'C{j}', ls=':') for j, f in enumerate(FREQS)]\n",
-    "    axs[i].set_title(f'mic{i}')\n",
-    "    axs[i].set_xlabel(f'seconds [s]')\n",
-    "fig.suptitle('spectrograms during wall approach')\n",
-    "    \n",
-    "    \n",
+    "appendix = \"\"\n",
+    "source = \"None\"\n",
+    "mic_type = \"audio_deck\"\n",
+    "\n",
+    "filter_dict = {\"source\":source, \"appendix\":appendix, \"mic_type\":mic_type, \"distance\":51}\n",
+    "df_sources = filter_by_dicts(df_total, [filter_dict])\n",
+    "assert len(df_sources) == 1, df_sources\n",
+    "row = df_sources.iloc[0]\n",
+    "\n",
+    "\n",
     "plt.figure()\n",
+    "times_idx = ~np.isnan(row.d_estimate)\n",
+    "spec = row.spectrogram[:, times_idx, :]\n",
+    "    \n",
     "mask = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
-    "spec_average = np.mean(np.mean(spec[mask, :, :], axis=2), axis=1)\n",
+    "spec[spec==0] = np.nan\n",
+    "spec_average = np.nanmean(spec[mask, :, :], axis=(1, 2))\n",
     "\n",
     "max_indices = scipy.signal.find_peaks(spec_average, height=5)[0][:3]\n",
     "#max_indices = np.argsort(spec_average)[::-1][:3]\n",
     "plt.plot(all_frequencies[mask], spec_average)\n",
     "[plt.axvline(all_frequencies[mask][m], color=f'C{j}', label=f'peak{j}', ls=':') for j, m in enumerate(max_indices)]\n",
     "plt.grid(which='both')\n",
-    "plt.legend()"
+    "plt.title('total spectrogram, average of 4 mics')\n",
+    "print('max frequencies:', all_frequencies[mask][max_indices])"
    ]
   },
   {
@@ -283,8 +375,10 @@
     "\n",
     "# choose only times where the max snr bin is given. \n",
     "#freqs = all_frequencies[mask][max_indices]\n",
-    "freq_max = 703\n",
+    "freq_max = all_frequencies[mask][max_indices][1] \n",
     "times_idx = np.where(row.frequencies_matrix[:, 1] == freq_max)[0]\n",
+    "if not len(times_idx):\n",
+    "    print(f'never have {freq_max} as strongest index: {row.frequencies_matrix[:, 1]}')\n",
     "distances = row.d_estimate[times_idx] * 100\n",
     "\n",
     "#for j, f_idx in enumerate(max_indices):\n",
@@ -348,7 +442,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for source in [s for s in df_total.source.unique() if 'mono' in s]:\n",
+    "for source in df_total.source.unique():\n",
+    "    #if not 'mono'in source:\n",
+    "        #continue\n",
     "    filter_dict['source'] = source\n",
     "    rows = filter_by_dicts(df_total, [filter_dict])\n",
     "    assert len(rows) == 1\n",
@@ -360,7 +456,7 @@
     "\n",
     "        plot_spectrogram(ax, row, min_freq=100, max_freq=5000, mic_idx=mic_idx)\n",
     "        [ax.axhline(f, label=f'{f}', color=f'C{i}', ls=':') for i, f in enumerate(FREQS)]\n",
-    "        ax.set_title(row.source + row.appendix + f\" mic{mic_idx}\")\n",
+    "        ax.set_title(row.source + row.appendix + f\" mic{mic_idx} snr:{row.snr}\")\n",
     "        ax.legend(loc='lower left')"
    ]
   },
@@ -370,6 +466,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(filter_dict)\n",
+    "rows = filter_by_dicts(df_total, [filter_dict])\n",
+    "assert len(rows) == 1\n",
+    "row = rows.iloc[0]\n",
+    "\n",
     "strongest_bin = row.frequencies_matrix[:, 0]\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 5)\n",
@@ -479,6 +580,13 @@
     "                axs[j, i].set_title(f'mic{i}')\n",
     "        #[axs[0, i].set_xlim(5, 20) for i in range(n_mics)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
