--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -481,7 +481,8 @@
    },
    "outputs": [],
    "source": [
-    "exp_name = '2020_12_7_moving'; \n",
+    "#exp_name = '2020_12_7_moving'; \n",
+    "exp_name = '2020_12_18_stepper'; \n",
     "fname = f'results/{exp_name}_real.pkl'\n",
     "\n",
     "try:\n",
