Add calibration results and frequency slices

--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -293,14 +293,21 @@
     "x_max = np.max(freqs_all) \n",
     "\n",
     "for i, row in df_calib.iterrows():\n",
+    "    \n",
     "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(7, 5)\n",
-    "    ax.set_title(f'{row.source}{row.type.replace(\"psd_dict\", \"\")}, {row.method}')\n",
+    "    fig.set_size_inches(5, 5)\n",
+    "    title = f'{row.source}{row.type.replace(\"psd_dict\", \"\")}'\n",
+    "    ax.set_title(f'{title}, {row.method}')\n",
     "    for i in range(row.psd.shape[0]):\n",
     "        ax.errorbar(x=row.frequencies, y=row.psd[i, :], yerr=row.psd_std[i, :])\n",
     "    ax.set_yscale('log')\n",
     "    ax.set_ylim(y_min, y_max)\n",
-    "    ax.set_xlim(x_min, x_max)"
+    "    ax.set_xlim(x_min, x_max)\n",
+    "    ax.set_xlabel('frequency [Hz]')\n",
+    "    ax.set_ylabel('PSD')\n",
+    "    \n",
+    "    if (row.method == 'median') and (row.source == 'sweep_buzzer'):\n",
+    "        fig.savefig(f'plots/calibration_{title}.pdf', bbox_inches='tight')"
    ]
   },
   {
