--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -183,7 +183,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -196,7 +196,9 @@
     "    \n",
     "CHOSEN_MICS = [0, 1, 2, 3] #[3]\n",
     "\n",
-    "for (distance,mic_type,motors), df_this in df_chosen.groupby(['distance', 'mic_type', 'motors']):\n",
+    "df_here = filter_by_dicts(df_chosen, [{'degree': 0}])\n",
+    "\n",
+    "for (distance,mic_type,motors), df_this in df_here.groupby(['distance', 'mic_type', 'motors']):\n",
     "    if mic_type == 'audio_deck':\n",
     "        mic_indices = CHOSEN_MICS\n",
     "        bins_ = range(32)\n",
@@ -300,10 +302,11 @@
     "            continue\n",
     "        row = df_this.iloc[0]\n",
     "        \n",
-    "        for i in range(4):\n",
+    "        for i in range(1):\n",
     "            #axs[0, j].scatter(row.seconds, row.frequencies_matrix[:, i], label=i)\n",
-    "            axs[0, j].scatter(range(len(row.seconds)), row.frequencies_matrix[:, i], label=i)\n",
-    "        axs[0, j].set_title(f'motors {motors}')"
+    "            axs[0, j].scatter(range(len(row.seconds)), row.frequencies_matrix[:, i], label=f\"{i+1} strongest\")\n",
+    "        axs[0, j].set_title(f'motors {motors}')\n",
+    "        axs[0, j].legend(loc=\"upper right\")"
    ]
   },
   {
@@ -319,7 +322,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from simulation import get_setup\n",
+    "\n",
+    "distance = 10\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(5, 5)\n",
+    "for yaw_deg, marker in zip([0, 30], ['o', 'x']):\n",
+    "    source, mic_positions = get_setup(distance_cm=10, yaw_deg=yaw_deg)\n",
+    "    source_image = [source[0], -source[1]]\n",
+    "    for i, mic in enumerate(mic_positions):\n",
+    "        plt.scatter(*mic, label=f'mic{i}, {yaw_deg}deg', marker=marker, color=f'C{i}')\n",
+    "plt.plot([4.8, 5.4], [0, 0], color='k', label='wall')\n",
+    "plt.title(f'setup for distance={distance}cm')\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.xlabel('x [m]')\n",
+    "plt.ylabel('y [m]')\n",
+    "plt.axis('equal')\n",
+    "\n",
+    "fig.savefig(f'plots/setup_{distance}.pdf', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from scipy.interpolate import interp1d\n",
+    "\n",
+    "CHOSEN_MICS = [0, 1, 2, 3] #[0, 1, 2, 3] #[3]\n",
+    "\n",
     "n_freq = 1 \n",
     "calib_df = pd.read_pickle('results/calibration_results.pkl')\n",
     "chosen_dict = {\n",
@@ -334,11 +367,14 @@
     "row = calib_df.iloc[0]\n",
     "\n",
     "fig, axs = plt.subplots(1, len(CHOSEN_MICS), squeeze=False, sharey=True, sharex=True)\n",
-    "fig.set_size_inches(15, 5)\n",
+    "fig.set_size_inches(10, 5)\n",
     "#fig.suptitle(f'{distance}cm, {mic_type} mic, motors:{motors}')\n",
-    "for i in range(row.psd.shape[0]):\n",
-    "    axs[0, i].semilogy(row.frequencies, row.psd[i], color=f'C{i}')\n",
-    "axs[0, i].set_ylim(1e-3, 20)\n",
+    "for i, mic_idx in enumerate(CHOSEN_MICS):\n",
+    "    axs[0, i].semilogy(row.frequencies, row.psd[mic_idx], color=f'C{mic_idx}')\n",
+    "    axs[0, i].set_xlabel('frequency [Hz]')\n",
+    "    axs[0, i].set_title(f'mic{mic_idx}')\n",
+    "axs[0, 0].set_ylabel('PSD')\n",
+    "axs[0, i].set_ylim(1e-2, 20)\n",
     "\n",
     "calib_psd = row.psd\n",
     "calib_f = row.frequencies\n",
@@ -346,9 +382,11 @@
     "uniform_f = np.linspace(1000, 6000, 50)\n",
     "calib = interp1d(x=calib_f, y=calib_psd, kind='linear', fill_value='extrapolate')\n",
     "uniform_psd = calib(uniform_f)\n",
-    "for i in range(row.psd.shape[0]):\n",
-    "    axs[0, i].scatter(uniform_f, uniform_psd[i], color=f'C{i}')\n",
-    "    axs[0, i].grid('both')"
+    "for i, mic_idx in enumerate(CHOSEN_MICS):\n",
+    "    axs[0, i].scatter(uniform_f, uniform_psd[mic_idx], color=f'C{mic_idx}')\n",
+    "    axs[0, i].grid('both')\n",
+    "    \n",
+    "fig.savefig('plots/calibration.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -361,23 +399,30 @@
    "source": [
     "from constants import SPEED_OF_SOUND\n",
     "from wall_analysis import extract_psd_dict, extract_psd\n",
-    "from simulation import get_freq_slice_pyroom, get_freq_slice_theory, get_setup\n",
+    "from simulation import get_freq_slice_pyroom, get_freq_slice_theory\n",
     "    \n",
     "sys.path.append(f'../experiments/{exp_name}/')\n",
     "from params import MIN_FREQ, MAX_FREQ\n",
     "    \n",
-    "CHOSEN_MICS = [0, 1, 2, 3] #[3]\n",
     "MIN_F = 1000\n",
     "MAX_F = 4000\n",
     "\n",
-    "df_audio_deck = df_chosen[df_chosen.mic_type=='audio_deck']\n",
+    "filter_dict = {\n",
+    "    'mic_type': 'audio_deck',\n",
+    "    'degree': 0\n",
+    "}\n",
+    "df_audio_deck = filter_by_dicts(df_chosen, [filter_dict])\n",
     "\n",
     "distances = df_chosen.distance.unique()\n",
     "features = {\n",
-    "    'variance': np.zeros((len(CHOSEN_MICS), len(distances))),\n",
-    "    'range': np.zeros((len(CHOSEN_MICS), len(distances)))\n",
+    "    'variance': np.zeros((4, len(distances))),\n",
+    "    'range': np.zeros((4, len(distances)))\n",
     "}\n",
-    "signal = pd.read_pickle('results/multi.pk')\n",
+    "\n",
+    "try:\n",
+    "    signal = pd.read_pickle('results/multi.pk')\n",
+    "except FileNotFoundError:\n",
+    "    print('Run WallStudy notebook to save signal results/multi.pk')\n",
     "\n",
     "d_idx = 0\n",
     "for (distance, motors), df_this in df_audio_deck.groupby(['distance', 'motors']):\n",
@@ -395,51 +440,62 @@
     "    \n",
     "    psd, frequencies, psd_std = extract_psd([psd_dict])\n",
     "    psd_calib = calib(frequencies)\n",
-    "    psd_mean = np.mean(psd_calib, axis=0)\n",
+    "    #psd_mean = np.mean(psd_calib, axis=0)\n",
     "    \n",
     "    mask = (frequencies < MAX_F) & (frequencies > MIN_F)\n",
     "    psd = psd[:, mask]\n",
     "    psd_calib = psd_calib[:, mask]\n",
-    "    psd_mean = psd_mean[mask]\n",
+    "    #psd_mean = psd_mean[mask]\n",
     "    frequencies = frequencies[mask]\n",
     "    \n",
-    "    source, mic_positions = get_setup(distance_cm = distance)\n",
+    "    source, mic_positions = get_setup(distance_cm=distance)\n",
     "    source_image = [source[0], -source[1]]\n",
     "    \n",
     "    fig, axs = plt.subplots(3, len(CHOSEN_MICS), squeeze=False, sharey=True, sharex=True)\n",
     "    axs[0, 0].set_yscale('log')\n",
-    "    axs[0, 0].set_ylim(1e-1, 20)\n",
-    "    fig.set_size_inches(15, 10)\n",
+    "    axs[0, 0].set_ylim(1e-2, 20)\n",
+    "    fig.set_size_inches(10, 5)\n",
     "    fig.suptitle(f'{distance}cm, {mic_type} mic, motors:{motors}')\n",
     "    \n",
-    "    for mic_idx in CHOSEN_MICS:\n",
-    "        axs[0, mic_idx].set_title(f'm{mic_idx}')\n",
-    "        axs[0, mic_idx].plot(frequencies, psd[mic_idx], label=f'mic{mic_idx}', color=f'C{mic_idx}')\n",
-    "        axs[0, mic_idx].scatter(frequencies, psd_calib[mic_idx], color=f'C{mic_idx}')\n",
-    "        axs[0, mic_idx].plot(frequencies, psd_mean, color='k')\n",
+    "    slices_theory = get_freq_slice_theory(frequencies, distance_cm=distance)\n",
+    "    slices_pyroom = get_freq_slice_pyroom(frequencies, distance_cm=distance, signal=signal)\n",
+    "    \n",
+    "    for j, mic_idx in enumerate(CHOSEN_MICS):\n",
+    "        axs[0, j].set_title(f'm{mic_idx}')\n",
+    "        axs[0, j].plot(frequencies, psd[mic_idx], label='Y(f)', color=f'C{mic_idx}')\n",
+    "        axs[0, j].plot(frequencies, psd_calib[mic_idx], ls=':', label='X(f)', color=f'C{mic_idx}')\n",
+    "        #axs[0, j].plot(frequencies, psd_mean, color='k')\n",
     "        \n",
     "        psd_ratio = psd[mic_idx]/psd_calib[mic_idx]\n",
-    "        axs[1, mic_idx].plot(frequencies, psd_ratio, label=f'per-mic-calib', color=f'C{mic_idx}')\n",
-    "        axs[1, mic_idx].plot(frequencies, psd[mic_idx]/psd_mean, label=f'global calib', color='k')\n",
+    "        axs[1, j].plot(frequencies, psd_ratio, label=f'H(f)', color=f'C{mic_idx}')\n",
+    "        #axs[1, j].plot(frequencies, psd[mic_idx]/psd_mean, label=f'global calib', color='k')\n",
     "        \n",
     "        features['variance'][mic_idx, d_idx] = np.var(psd_ratio)\n",
     "        features['range'][mic_idx, d_idx] = np.max(psd_ratio) - np.min(psd_ratio)\n",
+    "        axs[0, j].legend(loc='lower right')\n",
+    "        axs[1, j].legend(loc='lower right')\n",
     "\n",
-    "    slices_theory = get_freq_slice_theory(frequencies, distance_cm=distance)\n",
-    "    slices_pyroom = get_freq_slice_pyroom(frequencies, distance_cm=distance, signal=signal)\n",
-    "    for mic_idx in CHOSEN_MICS:\n",
+    "        #axs[1, j].plot(frequencies, np.abs(slices_theory[mic_idx]), label='theory', color=\"black\")\n",
+    "        #axs[1, j].plot(frequencies, np.abs(slices_pyroom[mic_idx]), label='pyroomacoustics', color=\"gray\")\n",
     "        \n",
-    "        axs[2, mic_idx].plot(frequencies, np.abs(slices_theory[mic_idx]), label='theory')\n",
-    "        axs[2, mic_idx].plot(frequencies, np.abs(slices_pyroom[mic_idx]), label='pyroom')\n",
-    "        axs[2, mic_idx].legend(loc='lower left')\n",
+    "        axs[2, j].plot(frequencies, np.abs(slices_theory[mic_idx]), label='theory', color=\"black\")\n",
+    "        axs[2, j].plot(frequencies, np.abs(slices_pyroom[mic_idx]), label='pyroom', color=\"gray\")\n",
+    "        axs[2, j].legend(loc='lower right')\n",
     "        \n",
+    "        axs[0, j].grid('both')\n",
+    "        axs[1, j].grid('both')\n",
+    "        axs[2, j].grid('both')\n",
     "        \n",
+    "    fig.savefig(f'plots/f_slice_{distance}.pdf', bbox_inches='tight')\n",
+    "\n",
+    "    d_idx += 1\n",
+    "    continue\n",
     "    fig, axs = plt.subplots(1, len(CHOSEN_MICS), squeeze=False, sharey=True, sharex=True)\n",
     "    #axs[0, 0].set_yscale('log')\n",
     "    #axs[0, 0].set_ylim(1e-1, 20)\n",
     "    fig.set_size_inches(15, 5)\n",
     "    fig.suptitle(f'{distance}cm, {mic_type} mic, motors:{motors}')\n",
-    "    for mic_idx in CHOSEN_MICS:\n",
+    "    for j, mic_idx in enumerate(CHOSEN_MICS):\n",
     "        mic = mic_positions[mic_idx]\n",
     "        delta = np.linalg.norm(mic - source_image) - np.linalg.norm(mic - source)\n",
     "        expected_period = SPEED_OF_SOUND / delta # m/s / m = Hz\n",
@@ -447,10 +503,8 @@
     "        psd_fft = np.fft.rfft(psd_ratio)[1:]\n",
     "        mean_f = np.mean(frequencies[1:]-frequencies[:-1])\n",
     "        freqs = np.fft.rfftfreq(len(psd_ratio), mean_f)[1:] # \"seconds\"\n",
-    "        axs[0, mic_idx].semilogx(1/freqs, np.abs(psd_fft), color=f'C{mic_idx}')\n",
-    "        axs[0, mic_idx].axvline(expected_period, color=f'C{mic_idx}', ls=\":\") # cm\n",
-    "        \n",
-    "    d_idx += 1"
+    "        axs[0, j].semilogx(1/freqs, np.abs(psd_fft), color=f'C{mic_idx}')\n",
+    "        axs[0, j].axvline(expected_period, color=f'C{mic_idx}', ls=\":\") # cm"
    ]
   },
   {
@@ -463,7 +517,9 @@
     "for j, (key, vals) in enumerate(features.items()):\n",
     "    for i in range(vals.shape[0]):\n",
     "        axs[0, j].plot(distances, vals[i], label=f'mic{i}', color=f'C{i}', marker='x')\n",
-    "    axs[0, j].set_title(key)"
+    "    #axs[0, j].set_title(key)\n",
+    "    axs[0, j].set_xlabel('distance [cm]')\n",
+    "    axs[0, j].set_ylabel(f'feature {key}')"
    ]
   },
   {
