--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -33,6 +33,12 @@
    "source": [
     "sys.path.append('../crazyflie-audio/python/')\n",
     "from bin_selection import select_frequencies\n",
+    "from crazyflie_description_py.parameters import N_BUFFER, FS, FFTSIZE\n",
+    "\n",
+    "\n",
+    "DURATION_PER_FREQ = 0.5 \n",
+    "DURATION_SEC = DURATION_PER_FREQ * FFTSIZE\n",
+    "print(DURATION_SEC)\n",
     "\n",
     "def buzzer_signal(source):\n",
     "    from signals import generate_signal\n",
@@ -54,15 +60,18 @@
     "            signal += generate_signal(signal_type='mono', frequency_hz=f, **kwargs, phase_offset=phase)\n",
     "        return signal\n",
     "    elif source == 'sweep':\n",
+    "        # duration of each frequency bin\n",
     "        min_freq = 100\n",
     "        max_freq = 4400\n",
+    "        \n",
     "        bins = select_frequencies(n_buffer=N_BUFFER, fs=FS, min_freq=min_freq, max_freq=max_freq)\n",
     "        \n",
-    "        signal = np.zeros(int(FS * kwargs['duration_sec']))\n",
-    "        kwargs['duration_sec'] = 0.5\n",
-    "        \n",
+    "        duration_all = len(bins) * duration_per_freq\n",
+    "        signal = np.zeros(int(FS * duration_all))\n",
     "        idx = 0\n",
     "        for f in frequencies[bins]:\n",
+    "            \n",
+    "            kwargs['duration_sec'] = duration_per_freq\n",
     "            mono = generate_signal(signal_type='mono', frequency_hz=f, **kwargs)\n",
     "            signal[idx:idx+len(mono)] = mono\n",
     "            idx += len(mono)\n",
