Add stepper analysis

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -69,59 +69,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MIN_S = 5 # read from plot\n",
-    "MAX_S = 25 # read from plot\n",
-    "\n",
-    "def add_distance_estimates(row, ax=None, min_time=MIN_S, max_time=MAX_S, min_z=300):\n",
-    "    if row.distance == 51:\n",
-    "        d = np.linspace(.1, .6, len(row.seconds))\n",
-    "    elif row.distance == -51:\n",
-    "        d = np.linspace(.1, .6, len(row.seconds))[::-1]\n",
-    "    else:\n",
-    "        d = np.full(len(row.seconds), np.nan)\n",
-    "        row.z[np.isnan(row.z)] = 0\n",
-    "        start_idx = np.where(row.seconds > min_time)[0][0]\n",
-    "        end_idx = np.where(row.seconds < max_time)[0][-1]\n",
-    "\n",
-    "        assert end_idx > start_idx, f\"{start_idx}<={end_idx}\"\n",
-    "        valid_z = row.z[start_idx:end_idx]\n",
-    "        max_idx = start_idx + np.argmax(valid_z)\n",
-    "        try:\n",
-    "            min_idx = start_idx + np.where(valid_z > min_z)[0][-1]\n",
-    "        except:\n",
-    "            min_idx = 0\n",
-    "        duration = row.seconds[min_idx] - row.seconds[max_idx]\n",
-    "\n",
-    "        times = row.seconds[max_idx:min_idx] - row.seconds[max_idx]\n",
-    "        d[max_idx:min_idx] = D_START - times * VELOCITY\n",
-    "        \n",
-    "        if ax is not None:\n",
-    "            ax.axvline(row.seconds[start_idx], color='r')\n",
-    "            ax.axvline(row.seconds[max_idx], color='k', label='start (max)')\n",
-    "            ax.axvline(row.seconds[min_idx], color='k', label=f'end (above {min_z})')\n",
-    "            ax.axvline(row.seconds[end_idx], color='b')\n",
-    "            ax.set_xlim(0, 35)\n",
-    "            ax.set_title(f\"duration: {duration:.1f}s\")\n",
-    "        \n",
-    "    row['d_estimate'] = d\n",
-    "\n",
-    "    if ax is not None:\n",
-    "        ax.scatter(row.seconds, d * 1000, color='k', label='distance')\n",
-    "        ax.legend()\n",
-    "    return row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
+    "from wall_analysis import add_distance_estimates\n",
+    "\n",
     "VELOCITY = 0.05 # [m/s], parameter in crazyflie\n",
     "D_START = 0.6 # [m], starting distance \n",
     "\n",
@@ -168,37 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_spectrogram(row):\n",
-    "    if row.frequencies_matrix is None:\n",
-    "        return row\n",
-    "    \n",
-    "    # spectrogram is of shape 1025 x n_times x n_mics\n",
-    "    spectrogram = np.zeros((len(all_frequencies), row.signals_f.shape[0], row.signals_f.shape[1]), dtype=float) \n",
-    "    for t_idx in range(row.signals_f.shape[0]):\n",
-    "        freqs = row.frequencies_matrix[t_idx, :]\n",
-    "        for i, f in enumerate(freqs):\n",
-    "            f_idx =  np.argmin(np.abs(f - all_frequencies))\n",
-    "            if abs(all_frequencies[f_idx] - f) > 1: \n",
-    "                print(f'Warning: frequency {f} is far from {all_frequencies}')\n",
-    "            if 0: #np.any(spectrogram[f_idx, t_idx, :] > 0):\n",
-    "                print('overwriting', t_idx, f_idx, f, freqs[0])\n",
-    "                err = np.max(np.abs(np.abs(row.signals_f[t_idx, :, i]) - spectrogram[f_idx, t_idx, :]))\n",
-    "                # TODO(FD) find out why there is a difference between the\n",
-    "                # first freq. bin (forced) and the one selected by snr scheme. \n",
-    "                if err > 0.1:\n",
-    "                    print('big error:', err)\n",
-    "            spectrogram[f_idx, t_idx, :] = np.abs(row.signals_f[t_idx, :, i])\n",
-    "    row.spectrogram = spectrogram\n",
-    "    return row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "from wall_analysis import add_spectrogram\n",
     "all_frequencies = np.ceil(np.fft.rfftfreq(N_BUFFER, 1/FS))\n",
     "df_total = df_total.assign(spectrogram=None)\n",
     "df_total = df_total.apply(add_spectrogram, axis=1)"
