--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -300,8 +300,8 @@
     "from constants import SPEED_OF_SOUND\n",
     "\n",
     "#frequencies_slices = [671, 3125, 4156, 8000]\n",
-    "#frequencies_slices = [1750, 2375, 3125, 3875]\n",
-    "frequencies_slices = [703 * (i + 1) for i in range(4)]\n",
+    "frequencies_slices = [1750, 2375, 3125, 3875]\n",
+    "#frequencies_slices = [703 * (i + 1) for i in range(4)]\n",
     "#frequencies_slices = [359,  703, 1406]\n",
     "\n",
     "max_distance = 60\n",
